alignment is corrected

--- a/little-lemon-restaurant/src/components/pages/HomePage/About.css
+++ b/little-lemon-restaurant/src/components/pages/HomePage/About.css
@@ -15,16 +15,19 @@
     font-weight: medium;
     font-size: 56px;
     line-height: 30px;
+    
   }
   .about-subtitle {
     font-family: "Markazi Text";
     font-size: 40px;
     line-height: 20px;
     color: #333333;
+    margin-top: 20px;
   }
   .about-description {
     color: black;
     padding-right: 6rem;
+    margin-top: 20px;
   }
   
   .about-image-bruchetta {
