--- a/little-lemon-restaurant/src/components/pages/HomePage/Specials.css
+++ b/little-lemon-restaurant/src/components/pages/HomePage/Specials.css
@@ -3,6 +3,7 @@
   padding: 2.5rem 0;
   max-width: 65rem;
   margin: 0 auto;
+  background-color: #edefee;
 }
 
 .header-container {
